<resources>
    <string name="app_name">Pets</string>
    <string name="app_logo">Logo da aplicação</string>
    <string name="app_version">v.0.1-dev</string>

    <!-- (((USERS))) -->
    <string name="user">Usuário</string>
    <string name="users">Usuários</string>
    <string name="new_user">Novo Usuário</string>
    <string name="edit_user">Editar Usuário</string>
    <string name="list_users">Lista de Usuários</string>
    <string name="role">Cargo</string>
    <!-- (((FIM USERS))) -->

    <!-- (((CLIENTS))) -->
    <string name="client">Cliente</string>
    <string name="clients">Clientes</string>
    <string name="new_client">Novo Cliente</string>
    <string name="edit_client">Editar Cliente</string>
    <string name="list_clients">Lista de Clientes</string>
    <!-- (((FIM CLIENTES))) -->

    <!-- (((PRODUCTS))) -->
    <string name="product">Produto</string>
    <string name="products">Produtos</string>
    <string name="new_product">Novo Produto</string>
    <string name="edit_product">Editar Produto</string>
    <string name="list_products">Lista de Produtos</string>
    <string name="product_availablility">Diponível</string>
    <!-- (((FIM PRODUCTS))) -->

    <!-- (((PETS))) -->
    <string name="pet">Pet</string>
    <string name="pets">Lista de Pets</string>
    <string name="species">Espécie</string>
    <string name="breed">Raça</string>
    <string name="owner">Dono</string>
    <string name="new_pet">Novo Pet</string>
    <string name="edit_pets">Editar Pet</string>
    <!-- (((FIM PETS))) -->

    <!-- (((ORDER))) -->
    <string name="order">Compra</string>
    <string name="orders">Compras</string>
    <string name="list_orders">Lista de Compras</string>
    <string name="items">Itens</string>
    <string name="Item">Item</string>
    <string name="amout">Total</string>
    <string name="checkout">Finalizar Compra</string>
    <string name="cancel">Cancelar</string>
    <string name="next">Próximo</string>
    <string name="confirm">Confirmar</string>
    <string name="finish">Finalizar</string>
    <!-- (((FIM ORDER)) -->


    <string name="login">Acessar</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="cpf">CPF</string>
    <string name="password">Senha</string>
    <string name="phone">Telefone</string>
    <string name="category">Categoria</string>
    <string name="admin">Administrador</string>
    <string name="price">Preço</string>
    <string name="calendar">Agenda</string>
    <string name="carts">Compras</string>
    <string name="details">Detalhes</string>
    <string name="remove">Remover</string>
    <string name="quantity">Quantidade</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="back">Voltar</string>

    <string-array name="role_array">
        <item>Atendimento</item>
        <item>Veterinário</item>
        <item>Gerente</item>
        <item>Estoquista</item>
        <item>Diretor</item>
        <item>President</item>
        <item>Investidor</item>
    </string-array>

    <string-array name="category_array">
        <item>Cuidado</item>
        <item>Conforto</item>
        <item>Brinquedos</item>
        <item>Saúde</item>
        <item>Serviço</item>
    </string-array>
</resources>