<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".activities.NewUserActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:onClick="back"
        android:src="?attr/actionModeCloseDrawable"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/subscribe"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="45dp"
            android:paddingRight="45dp">

            <TextView
                android:id="@+id/textName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editName"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textSurname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/surname"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editSurname"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textCPF"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/cpf"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editCPF"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editPassword"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>